[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image_utils = { path = "../libs/image_utils" }
cli = { path = "../libs/cli" }

[profile.release]
strip = true
opt-level = "s"
lto = true
debug = false
codegen-units = 1
